--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:unit": "jest --config ./test/jest-unit.json",
     "typeorm": "node -r tsconfig-paths/register -r ts-node/register ./node_modules/typeorm/cli.js",
     "typeorm:generate-migration": "yarn typeorm -- -d ./src/config/cli.config.ts migration:generate ./src/database/migrations/$MIGRATION_NAME",
     "typeorm:run-migration": "yarn typeorm -- -d ./src/config/cli.config.ts migration:run",
