chore: change .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=3000
 
 DB_HOST=product-backend-db # Reflect compose.yml database name
-DB_PORT=
+DB_PORT=5432
 DB_USER=
 DB_PASSWORD=
-DB_NAME=
+DB_NAME=product-db
