chore: edit .env

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ PORT=3000
 
 DB_HOST=product-backend-db # Reflect compose.yml database name
 DB_PORT=5432
-DB_USER=
-DB_PASSWORD=
+DB_USER=user_dev
+DB_PASSWORD=pass_dev
 DB_NAME=product-db
